manifests/gluetun/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "gluetun"
  namespace: "gluetun"
  labels:
    app.kubernetes.io/name: "gluetun"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "gluetun"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "gluetun"
    spec:
      containers:
        - name: "prowlarr"
          image: "lscr.io/linuxserver/prowlarr:latest"
          imagePullPolicy: "Always"
          ports:
            - containerPort: 9696
              protocol: "TCP"
          startupProbe:
            tcpSocket:
              port: 9696
          readinessProbe:
            tcpSocket:
              port: 9696
          livenessProbe:
            tcpSocket:
              port: 9696
          volumeMounts:
            - mountPath: "/config"
              name: "prowlarr-config"

#        - name: "transmission"
#          image: "lscr.io/linuxserver/transmission:latest"
#          imagePullPolicy: "IfNotPresent"
#          env:
#            - name: "TZ"
#              value: "Europe/Oslo"
#            - name: "PUID"
#              value: "1000"
#            - name: "PGID"
#              value: "1000"
#          ports:
#            - containerPort: 9091
#              protocol: "TCP"
#          startupProbe:
#            tcpSocket:
#              port: 9091
#          readinessProbe:
#            tcpSocket:
#              port: 9091
#          livenessProbe:
#            tcpSocket:
#              port: 9091
#          volumeMounts:
#            - mountPath: "/config"
#              name: "transmission-config"
#            - mountPath: "/media"
#              name: "transmission-media"

        - name: "qbittorrent"
          image: "lscr.io/linuxserver/qbittorrent:latest"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
              protocol: "TCP"
          startupProbe:
            tcpSocket:
              port: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
          volumeMounts:
            - mountPath: "/config"
              name: "qbittorrent-config"
            - mountPath: "/media"
              name: "qbittorrent-media"

      volumes:
        - name: "gluetun"
          persistentVolumeClaim:
            claimName: "gluetun"
        - name: "unbound"
          configMap:
            name: "unbound"
            defaultMode: 0644
        - name: "prowlarr-config"
          persistentVolumeClaim:
            claimName: "prowlarr-config"
        - name: "transmission-config"
          persistentVolumeClaim:
            claimName: "transmission-config"
        - name: "transmission-media"
          persistentVolumeClaim:
            claimName: "transmission-media"
        - name: "qbittorrent-config"
          persistentVolumeClaim:
            claimName: "qbittorrent-config"
        - name: "qbittorrent-media"
          persistentVolumeClaim:
            claimName: "qbittorrent-media"
