manifests/gluetun/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "prowlarr"
  namespace: "gluetun"
spec:
  type: "ClusterIP"
  selector:
    app.kubernetes.io/name: "gluetun"
  ports:
    - port: 9696
      targetPort: 9696
      protocol: "TCP"
      name: "prowlarr"
---
apiVersion: v1
kind: Service
metadata:
  name: "transmission"
  namespace: "gluetun"
spec:
  type: "ClusterIP"
  selector:
    app.kubernetes.io/name: "gluetun"
  ports:
    - port: 9091
      targetPort: 9091
      protocol: "TCP"
      name: "transmission"
---
apiVersion: v1
kind: Service
metadata:
  name: "qbittorrent"
  namespace: "gluetun"
spec:
  type: "ClusterIP"
  selector:
    app.kubernetes.io/name: "gluetun"
  ports:
    - port: 8080
      targetPort: 8080
      protocol: "TCP"
      name: "qbittorrent"
---
apiVersion: v1
kind: Service
metadata:
  name: "gluetun-lb"
  namespace: "gluetun"
  annotations:
    lbipam.cilium.io/ips: "192.168.1.61"
spec:
  type: "LoadBalancer"
  selector:
    app.kubernetes.io/name: "gluetun"
  ports:
    - port: 80
      targetPort: 8000
      protocol: "TCP"
---
apiVersion: v1
kind: Service
metadata:
  name: "prowlarr-lb"
  namespace: "gluetun"
  annotations:
    lbipam.cilium.io/ips: "192.168.1.60"
spec:
  type: "LoadBalancer"
  selector:
    app.kubernetes.io/name: "gluetun"
  ports:
    - port: 80
      targetPort: 9696
      protocol: "TCP"
---
apiVersion: v1
kind: Service
metadata:
  name: "transmission-lb"
  namespace: "gluetun"
  annotations:
    lbipam.cilium.io/ips: "192.168.1.57"
spec:
  type: "LoadBalancer"
  selector:
    app.kubernetes.io/name: "gluetun"
  ports:
    - port: 80
      targetPort: 9091
      protocol: "TCP"
---
apiVersion: v1
kind: Service
metadata:
  name: "qbittorrent-lb"
  namespace: "gluetun"
  annotations:
    lbipam.cilium.io/ips: "192.168.1.62"
spec:
  type: "LoadBalancer"
  selector:
    app.kubernetes.io/name: "gluetun"
  ports:
    - port: 80
      targetPort: 8080
      protocol: "TCP"
