manifests/gluetun/networkpolicies.yaml
---
apiVersion: "cilium.io/v2"
kind: "CiliumNetworkPolicy"
metadata:
  name: "egress"
  namespace: "gluetun"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: "gluetun"
  egress:
    # Allow egress traffic through wireguard
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "3125"  # wireguard endpoint port
              protocol: "UDP"
    # Allow traffic to other cluster services
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: "53" # dns
              protocol: "UDP"
            - port: "7878"  # radarr
              protocol: "TCP"
            - port: "8191"  # flaresolverr
              protocol: "TCP"
            - port: "8989" # sonarr
              protocol: "TCP"
